# telegram-news

./: .env.example  .gitignore  CLAUDE.md  config.yaml  pyproject.toml
docs/superpowers/plans/: 2026-04-29-group-chats-and-smart-picker.md
docs/superpowers/specs/: 2026-04-29-group-chats-and-smart-picker-design.md
src/telegram_news/: __main__.py  config.py  daemon.py  db.py  delivery.py  dialog_cache.py  resolve.py  runner.py  scheduler_ctl.py  summarize.py  tg.py  yaml_import.py
src/telegram_news/web/: app.py  deps.py  htmx.py  log_bus.py
src/telegram_news/web/routes/: auth.py  bots.py  dashboard.py  dialogs.py  groups.py  logs.py
src/telegram_news/web/static/: chat_picker.js
src/telegram_news/web/templates/: _chat_picker.html  _chip.html  _last_digest_cell.html  _next_run_cell.html  _picker_results.html  _schedule_cell.html  _schedule_edit.html  auth_code.html  auth_password.html  auth_phone.html  base.html  bot_form.html  bot_list.html  dashboard.html  group_form.html
tests/: test_db_migration.py  test_dialog_cache.py  test_resolve.py
