[project]
name = "telegram-news"
version = "0.1.0"
description = "Daemon that reads Telegram channels and produces grouped digests via LLM"
requires-python = ">=3.11"
dependencies = [
    "telethon>=1.36",
    "openai>=1.55",
    "pyyaml>=6.0",
    "apscheduler>=3.10",
    "typer>=0.12",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
]

[project.scripts]
telegram-news = "telegram_news.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/telegram_news"]
